<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    
    <string name="app_name">MusicNow</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome_message">Your Online Portal for Live Shows in Your Area</string>
    <string name="main_page">MainPage</string>
    <string name="find_a_show">Find Me\n a Show</string>
    
    <string name="account_login">Account Login</string>
    <string name="search_button">Search Button</string>
    <string name="favorites">Favorites</string>

    <string name="login">Login</string>
    <string name="account_name_label">Account Name</string>
    <string name="password_label">Password</string>
    <string name="verify_password_label">Verify Password</string>
    <string name="venue">Venue</string>
    <string name="performer">Performer</string>
    <string name="select_account_type">Select Account Type</string>
    
    
    <string name="title_activity_venue_profile">VenueProfileActivity</string>
    
    <string name="create_account">Create Account</string>
    <string name="forgot_account_info">Forgot Account Name or Password?</string>
    
    <string name="picture_file_label">Picture File</string>
    <string name="website_label">Additional Info Website Link</string>
    <string name="additional_venue_label">Venue Information</string>
    <string name="additional_performer_label">Performer Bio</string>
    <string name="venue_address_label">Address</string>
    <string name="venue_city_label">City</string>
    <string name="web_link_label">Enter Web Link</string>
    
    <string name="genre_label">Genre</string>
    
    <string-array name="genre_list">
        <item>Alternative</item>
        <item>Country</item>
        <item>Dance</item>
        <item>DJ</item>
        <item>Dubstep</item>
        <item>Folk</item>
        <item>Funk</item>
        <item>Indie</item>
        <item>Jazz</item>
        <item>Metal</item>
        <item>Punk</item>
        <item>Rap</item>
        <item>Rock</item>
    </string-array>
    
    <string name="venue_zip_code_label">Zip Code</string>
    <string name="venue_state_label">State</string>
    
    <string-array name="state">

        <item>Select State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

</resources>